# cmd-ipc

./: .gitignore  .prettierignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  eslint.config.mjs  package.json  tsconfig.build.json  tsconfig.json  vitest.workspace.ts
.github/workflows/: conformance.yml  deploy-docs.yml  pr-check.yml  publish-rust.yml  publish-ts.yml  publish.yml  rust.yml  ts.yml
docs/: astro.config.mjs  package.json
docs/public/: robots.txt
docs/public/scripts/: mermaid-modal.js
docs/src/config/: sidebar.ts
docs/src/content/docs/: index.mdx
docs/src/content/docs/api/: index.mdx  rust.mdx  typescript.mdx
docs/src/content/docs/examples/: cloudflare-workers.mdx  mcp-agent.mdx  overview.mdx
docs/src/content/docs/getting-started/: channels.mdx  cli.mdx  defining-commands.mdx  installation.mdx  quick-start.mdx  type-safety.mdx
docs/src/content/docs/introduction/: architecture.mdx  (+3 more)
docs/src/integrations/: llmify.ts
docs/src/styles/: custom.css
examples/agent-mcp/: README.md  package.json  tsconfig.json  vite.config.ts
examples/agent-mcp/src/: App.tsx  styles.css  vite-env.d.ts
examples/agent-mcp/src/agent/: gemini-chat-transport.ts  list-tools.ts
examples/agent-mcp/src/commands/: calc-service.ts
examples/agent-mcp/src/components/: ChatTab.tsx  MCPServersTab.tsx  ToolsSidebar.tsx
examples/agent-mcp/src/mcp/: mcp-server-manager.ts
examples/agent-mcp/src/middleware/: mcp-proxy.ts
examples/agent-mcp/src/utils/: oauth-popup.ts
examples/cf-worker/: README.md  package.json
examples/electron/: README.md
examples/web-workers/: README.md  index.html  vite.config.ts
examples/web-workers/src/: App.tsx  vite-env.d.ts
examples/web-workers/src/ipc/: channel-ids.ts  command-schema.ts  event-schema.ts
examples/web-workers/src/sandbox/: iframe-sandbox.html
examples/web-workers/src/workers/: calc.worker.ts  data.worker.ts
rust/: CHANGELOG.md  Cargo.toml
rust/crates/cmd-ipc/: Cargo.toml  README.md
rust/crates/cmd-ipc-macros/: Cargo.toml  README.md
rust/crates/cmd-ipc-macros/src/: attr_args.rs  command_attr.rs  commands_attr.rs  event_attr.rs  lib.rs  payload_attr.rs
rust/crates/cmd-ipc-mcp/: Cargo.toml  README.md
rust/crates/cmd-ipc-mcp/src/: lib.rs  server.rs  translate.rs
rust/crates/cmd-ipc-mcp/tests/: server_smoke.rs
rust/crates/cmd-ipc/src/: channel.rs  command.rs  error.rs  event.rs  lib.rs  message.rs  registry.rs  schema.rs  ttl_map.rs
rust/crates/cmd-ipc/tests/: concurrency.rs  conformance.rs  dynamic_integration.rs  macro_integration.rs  registry_integration.rs
rust/examples/dynamic-plugin/: Cargo.toml  README.md
rust/examples/dynamic-plugin/src/: main.rs
rust/examples/multi-service/: Cargo.toml  README.md
rust/examples/multi-service/src/: greet_service.rs  main.rs  math_service.rs  ui.rs
scripts/: release.mjs
spec/: README.md  messages.md
spec/conformance/: README.md
spec/conformance/behavior/: channel-close-cleanup.json  duplicate-registration.json  event-dedup.json  list-commands.json  local-event-broadcast.json  local-register-escalation.json  peer-advertises-via-list-response.json  private-command-not-advertised.json  private-event-not-broadcast.json  register-then-execute.json  remote-error-propagation.json  router-escalation.json  unknown-command-error.json
spec/conformance/encoding/: event.json  execute-command-request.json  execute-command-response-error.json  execute-command-response-success.json  list-commands-request.json  list-commands-response.json  register-command-request.json  register-command-response-err.json  register-command-response-ok.json
spec/schemas/: command-definition.json  event.json  execute.command.request.json  execute.command.response.json  list.commands.request.json  list.commands.response.json  message.json  register.command.request.json  register.command.response.json
src/channels/: index.ts
src/channels/http/: http-channel-interface.ts  http-channel.test.ts  http-channel.ts  index.ts
src/channels/mcp/: index.ts  mcp-client-channel.test.ts  mcp-client-channel.ts  mcp-json-rpc.ts  mcp-server-channel.test.ts  mcp-server-channel.ts  mcp-sse.ts  mcp-types.ts
src/channels/mcp/client/: mcp-client-channel.test.ts  mcp-client-channel.ts  mcp-client-types.ts  mcp-oauth-handler.ts  mcp-oauth-types.ts
src/channels/mcp/server/: mcp-server-channel.test.ts  mcp-server-channel.ts  mcp-server-types.ts
src/channels/message-port/: index.ts
src/cli/: index.ts
src/cli/generate-schema/: command.test.ts  index.ts  schema-fetcher.ts
src/commands/: index.ts
src/registry/: command-errors.ts  command-messages-types.ts  command-registry-interface.test.ts  command-registry-interface.ts  command-registry.test.ts  command-registry.ts  index.ts
src/schemas/: command-schema.ts  event-schema.test.ts  index.ts  schema-docs.ts
src/utils/: index.ts
ts/: eslint.config.mjs  package.json  tsconfig.json
ts/examples/agent-mcp/: .env.example  README.md  index.html
ts/examples/electron/: package.json  tsconfig.base.json
ts/examples/web-workers/: package.json  tsconfig.json
ts/examples/web-workers/src/: main.tsx  styles.css
(+29 files in other folders)
