[workspace]
members = ["crates/*", "examples/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/CoralStack/cmd-ipc"
authors = ["Angelfish Software LLC <support@coralstack.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
