[package]
name = "dynamic-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "dynamic-plugin"
path = "src/main.rs"

[dependencies]
coralstack-cmd-ipc = { path = "../../crates/cmd-ipc" }
# serde_json is reached at the use site for building raw JSON payloads
# that mimic what a plugin runtime would emit at runtime.
serde_json = { workspace = true }
futures = { workspace = true, features = ["executor", "thread-pool"] }
parking_lot = { workspace = true }
