[package]
name = "multi-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "multi-service"
path = "src/main.rs"

[dependencies]
coralstack-cmd-ipc = { path = "../../crates/cmd-ipc" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
schemars = { workspace = true }
futures = { workspace = true, features = ["executor", "thread-pool"] }
